package SistemaAcademico.classes;

public enum SituacaoAlunoEnum {
    APROVADO,
    REPROVADO_NOTA,
    REPROVADO_FREQUENCIA
}
